--- a/src/app/landlord/landlord.component.css
+++ b/src/app/landlord/landlord.component.css
@@ -23,6 +23,11 @@
     margin-left: -10px;
 }
 
+.invalid-feedback {
+    margin-left: 10px;
+    font-size: 13px;
+}
+
 #right-card {
     margin-top: 50px;
     margin-right: 50px;
@@ -42,8 +47,7 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="number"],
-textarea,
-select {
+textarea {
     outline: none;
     box-shadow: none !important;
     /* border: 1px solid #A01FBA !important; */
@@ -54,12 +58,21 @@ select {
     border-radius: 0px;
 }
 
+input[type="file"] {
+    border: none;
+    font-size: 13px;
+}
+
+#photo:hover {
+    border: none;
+}
+
 textarea {
     min-height: 100px;
     max-height: 400px;
 }
 
-input:hover {
+.col-md-6 input:hover {
     border-bottom: 2px solid #A01FBA !important;
 }
 
@@ -112,15 +125,19 @@ label {
 
 table i {
     padding: 5px;
+    color: white;
     margin: 3px;
 }
 
 .container {
+    margin-top: 80px;
     margin-bottom: 100px;
 }
 
 .container .row {
     margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .w-100 #topcard {
@@ -128,11 +145,14 @@ table i {
     width: 60px;
 }
 
-#datatable {
-    margin-top: 100px;
+.modal-body,
+.modal-footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.invalid-feedback {
-    margin-left: 10px;
-    font-size: 13px;
+img {
+    width: 200px;
+    height: 200px;
 }
