--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,8 +1,10 @@
-<div class="row">
-    <div id="column1" class="column">
-        <app-sidebar></app-sidebar>
-    </div>
-    <div id="column2" class="column">
-        <app-dashboard></app-dashboard>
+<div class="container-fluid">
+    <div class="row">
+        <div id="column1" class="column">
+            <app-sidebar></app-sidebar>
+        </div>
+        <div id="column2" class="column">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
