--- a/src/app/agent/agent.component.css
+++ b/src/app/agent/agent.component.css
@@ -1,3 +1,7 @@
+#datatable {
+    margin: 100px 5px 50px 5px;
+}
+
 #leftcard {
     margin-left: 40px;
     margin-top: 50px;
@@ -39,14 +43,10 @@
 }
 
 input[type="text"],
-input[type="password"],
-input[type="email"],
 input[type="number"],
-textarea,
 select {
     outline: none;
     box-shadow: none !important;
-    /* border: 1px solid #A01FBA !important; */
     font-size: 12px;
     border-top: none;
     border-right: none;
@@ -54,21 +54,23 @@ select {
     border-radius: 0px;
 }
 
-textarea {
-    min-height: 100px;
-    max-height: 400px;
+input[type="file"] {
+    border: none;
+    font-size: 13px;
 }
 
-input:hover {
-    border-bottom: 2px solid #A01FBA !important;
-}
-
-textarea:hover {
+.hoverable input:hover {
     border-bottom: 2px solid #A01FBA !important;
 }
 
 label {
     margin-left: 10px;
+}
+
+table i {
+    padding: 5px;
+    color: white;
+    margin-right: 5px;
 }
 
 #btn1 {
@@ -110,17 +112,19 @@ label {
     width: 70px;
 }
 
-table i {
-    padding: 5px;
-    margin: 3px;
+.text-muted {
+    font-size: 12px;
 }
 
 .container {
     margin-bottom: 100px;
+    margin-top: 80px;
 }
 
 .container .row {
     margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .w-100 #topcard {
@@ -128,11 +132,19 @@ table i {
     width: 60px;
 }
 
-#datatable {
-    margin-top: 100px;
-}
-
 .invalid-feedback {
     margin-left: 10px;
     font-size: 13px;
+}
+
+.image,
+.modal-footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+img {
+    width: 200px;
+    height: 200px;
 }
