--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,12 +2,11 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#">Dashboard</a>
     </nav>
-
     <div class="row">
         <div class="col-md-3">
             <div class="card mb-2">
                 <div class="card-body">
-                    <h5 class="card-title">Our Tenants</h5>
+                    <h5 class="card-title">Branches</h5>
                     <p class="card-text">110,340,245</p>
                     <hr>
                     <p class="card-text text-left"><small class="text-muted">November Rent</small></p>
@@ -26,7 +25,7 @@
         <div class="col-md-3">
             <div class="card mb-2">
                 <div class="card-body">
-                    <h5 class="card-title">Our Apartments</h5>
+                    <h5 class="card-title">Landlords</h5>
                     <p class="card-text">110,340,245</p>
                     <hr>
                     <p class="card-text text-left"><small class="text-muted">November Rent</small></p>
@@ -45,7 +44,7 @@
         <div class="col-md-3">
             <div class="card mb-2">
                 <div class="card-body">
-                    <h5 class="card-title">Revenue</h5>
+                    <h5 class="card-title">Tenants</h5>
                     <p class="card-text">110,340,245</p>
                     <hr>
                     <p class="card-text text-left"><small class="text-muted">November Rent</small></p>
@@ -64,7 +63,7 @@
         <div class="col-md-3">
             <div class="card mb-2">
                 <div class="card-body">
-                    <h5 class="card-title">Notifications</h5>
+                    <h5 class="card-title">Rooms</h5>
                     <p class="card-text">110,340,245</p>
                     <hr>
                     <p class="card-text text-left"><small class="text-muted">November Rent</small></p>
@@ -162,7 +161,7 @@
     <div id="verify">
         <h5>Verify Mpesa Transactions</h5>
     </div>
-    <div class="row">
+    <div id="datatable" class="row">
         <div class="card w-100">
             <div class="card-body">
                 <h6 class="card-title">Mpesa Transactions</h6>
@@ -175,59 +174,29 @@
                         </div>
                     </div>
                 </div>
-                <table style="width:100%">
-                    <tr>
-                        <th>#</th>
-                        <th>Name</th>
-                        <th>Transaction ID</th>
-                        <th>Phone</th>
-                        <th>Amount</th>
-                        <th>Actions</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>Andrew Mike</td>
-                        <td>HHSDHYF3242</td>
-                        <td>0705035022</td>
-                        <td>99,225</td>
-                        <td>Jill</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>Andrew Mike</td>
-                        <td>HHSDHYF3242</td>
-                        <td>0705035022</td>
-                        <td>99,225</td>
-                        <td>Jill</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>Andrew Mike</td>
-                        <td>HHSDHYF3242</td>
-                        <td>0705035022</td>
-                        <td>99,225</td>
-                        <td>Jill</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>Andrew Mike</td>
-                        <td>HHSDHYF3242</td>
-                        <td>0705035022</td>
-                        <td>99,225</td>
-                        <td>Jill</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>Andrew Mike</td>
-                        <td>HHSDHYF3242</td>
-                        <td>0705035022</td>
-                        <td>99,225</td>
-                        <td>Jill</td>
-                    </tr>
+                <table datatable [dtOptions]="dtOptions" class="row-border hover">
+                    <thead>
+                        <tr>
+                            <th>#</th>
+                            <th>Name</th>
+                            <th>Transaction ID</th>
+                            <th>Phone</th>
+                            <th>Amount</th>
+                            <th>Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Andrew Mike</td>
+                            <td>HHSDHYF3242</td>
+                            <td>0705035022</td>
+                            <td>99,225</td>
+                            <td><span><i class="fas fa-user bg-info"></i></span><span><i class="fas fa-edit bg-success"></i></span><i class="fas fa-times-circle bg-danger"></i><span></span></td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
-
     </div>
-
 </div>
