--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,5 +1,5 @@
 .login {
-    background-image: url("../../../src/assets/image/interior2.jpg");
+    background-image: url("/assets/image/interior2.jpg");
     background-size: cover;
     height: 636px;
     overflow: hidden;
@@ -21,6 +21,11 @@
 
 .social {
     margin-top: 20px;
+}
+
+.invalid-feedback {
+    margin: 5px auto 0px 30px;
+    font-size: 13px;
 }
 
 .social i {
@@ -51,10 +56,10 @@ form {
 
 input[type="text"],
 input[type="password"],
+input[type="number"],
 textarea {
     outline: none;
     box-shadow: none !important;
-    /* border: 1px solid #A01FBA !important; */
     font-size: 12px;
     border-top: none;
     border-right: none;
@@ -67,6 +72,7 @@ textarea {
 }
 
 input[type="text"],
+input[type="number"],
 input[type="password"] {
     margin: 0px 30px 0px 20px;
     width: 90%;
