--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -18,25 +18,24 @@
     <div class="card" id="bottomcard" style="width: 22rem;">
         <div class="card-body">
             <h5 class="card-title">Welcome to Krypto</h5>
-            <form>
+            <form [formGroup]="loginForm">
                 <div class="form-group mb-4">
-                    <select name="role" class="custom-select">
-                        <option selected="volvo">Choose Type...</option>
-                        <option value="volvo">Agent</option>
-                        <option value="saab">Landlord</option>
-                        <option value="fiat">Tenant</option>
-                        <option value="audi">Krypto Admin</option>
-                    </select>
-                </div>
-                <div class="form-group mb-4">
-                    <span><i class="fas fa-phone-alt"></i></span><input type="text" name="phone" class="form-control" placeholder="Phone Number">
+                    <span><i class="fas fa-user"></i></span>
+                    <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" placeholder="Username">
+                    <div *ngIf="submitted" class="invalid-feedback">
+                        <div>Username is required</div>
+                    </div>
                 </div>
                 <div class="form-group mb-2">
-                    <span><i class="fas fa-lock"></i></span><input type="password" name="password" class="form-control" placeholder="Password">
+                    <span><i class="fas fa-lock"></i></span>
+                    <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors}" placeholder="Password">
+                    <div *ngIf="submitted" class="invalid-feedback">
+                        <div>Password is required</div>
+                    </div>
                 </div>
             </form>
             <div class="row justify-content-center">
-                <button type="button" (click)="dashboard()" class="btn btn-primary"><span><i class="fas fa-fingerprint"></i></span> LOGIN</button>
+                <button type="submit" (click)="onSubmit()" class="btn btn-primary"><span><i class="fas fa-fingerprint"></i></span> LOGIN</button>
             </div>
         </div>
     </div>
