--- a/src/app/region/region.component.css
+++ b/src/app/region/region.component.css
@@ -1,3 +1,7 @@
+#datatable {
+    margin: 100px 5px 50px 5px;
+}
+
 #leftcard {
     margin-left: 40px;
     margin-top: 50px;
@@ -39,10 +43,6 @@
 }
 
 input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="number"],
-textarea,
 select {
     outline: none;
     box-shadow: none !important;
@@ -54,16 +54,7 @@ select {
     border-radius: 0px;
 }
 
-textarea {
-    min-height: 100px;
-    max-height: 400px;
-}
-
-input:hover {
-    border-bottom: 2px solid #A01FBA !important;
-}
-
-textarea:hover {
+.col-md-6 input:hover {
     border-bottom: 2px solid #A01FBA !important;
 }
 
@@ -110,17 +101,19 @@ label {
     width: 70px;
 }
 
-table i {
-    padding: 5px;
-    margin: 3px;
+.text-muted {
+    font-size: 12px;
 }
 
 .container {
     margin-bottom: 100px;
+    margin-top: 80px;
 }
 
 .container .row {
     margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .w-100 #topcard {
@@ -128,11 +121,17 @@ table i {
     width: 60px;
 }
 
-#datatable {
-    margin-top: 100px;
-}
-
 .invalid-feedback {
     margin-left: 10px;
     font-size: 13px;
+}
+
+table i {
+    padding: 5px;
+    /* color: white; */
+    margin: 3px;
+}
+
+a:hover {
+    cursor: pointer;
 }
