--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -21,13 +21,33 @@ hr {
 .branches,
 .banks,
 .invoices,
+.infrastructure,
 .events {
-    padding: 30px 0px 0px 50px;
+    margin: 10px 20px 0px 15px;
     font-size: 15px;
+    height: 50px;
+    width: 85%;
+    display: table;
+}
+
+.dropdown {
+    margin: 10px 20px 0px 15px;
+    font-size: 15px;
+    height: 50px;
+    width: 85%;
+}
+
+.dropdown i {
+    margin-left: 7px;
+}
+
+.dropdown-toggle {
+    margin-top: 6px;
 }
 
 .name {
-    margin: 30px 0px 30px 40px;
+    margin: 25px 0px 25px 25px;
+    font-size: 13px;
 }
 
 .admin {
@@ -39,12 +59,24 @@ hr {
 i {
     margin-right: 20px;
     font-size: 20px;
+    margin-left: 20px;
 }
 
-a {
+.link {
     color: white;
+    display: table-cell;
+    vertical-align: middle;
 }
 
 a:hover {
     text-decoration: none;
+}
+
+.dropdown-item {
+    color: black;
+    font-size: 12px;
+}
+
+.active-link {
+    background-color: #E53573;
 }
