--- a/src/app/tenant/tenant.component.css
+++ b/src/app/tenant/tenant.component.css
@@ -1,3 +1,7 @@
+#datatable {
+    margin: 100px 5px 50px 5px;
+}
+
 #leftcard {
     margin-left: 40px;
     margin-top: 50px;
@@ -42,8 +46,7 @@ input[type="text"],
 input[type="password"],
 input[type="email"],
 input[type="number"],
-textarea,
-select {
+textarea {
     outline: none;
     box-shadow: none !important;
     /* border: 1px solid #A01FBA !important; */
@@ -54,12 +57,17 @@ select {
     border-radius: 0px;
 }
 
+input[type="file"] {
+    border: none;
+    font-size: 13px;
+}
+
 textarea {
     min-height: 100px;
     max-height: 400px;
 }
 
-input:hover {
+.col-md-4 input:hover {
     border-bottom: 2px solid #A01FBA !important;
 }
 
@@ -89,6 +97,19 @@ label {
     border-radius: 80px;
 }
 
+.toggler {
+    margin: 20px 0px 0px 40px;
+}
+
+#btn3,
+#btn4 {
+    margin-right: 20px;
+    background-color: #E53573;
+    outline: none;
+    font-size: 13px;
+    padding: 10px 30px 10px 30px;
+}
+
 .navbar {
     background-color: transparent !important;
     margin: 20px 100px 0px 40px;
@@ -110,17 +131,25 @@ label {
     width: 70px;
 }
 
+.text-muted {
+    font-size: 12px;
+}
+
 table i {
     padding: 5px;
-    margin: 3px;
+    color: white;
+    margin-right: 5px;
 }
 
 .container {
     margin-bottom: 100px;
+    margin-top: 80px;
 }
 
 .container .row {
     margin-top: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .w-100 #topcard {
@@ -128,11 +157,18 @@ table i {
     width: 60px;
 }
 
-#datatable {
-    margin-top: 100px;
-}
-
 .invalid-feedback {
     margin-left: 10px;
     font-size: 13px;
+}
+
+.modal-body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+img {
+    width: 200px;
+    height: 200px;
 }
