--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@ body {
     font-family: 'Roboto Slab', serif;
     margin: 0px;
     padding: 0px;
-    width: 100%;
+    min-width: 100%;
+    min-height: 100%;
     overflow-x: hidden;
 }
